--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,10 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: rgb(190, 66, 66);
+  height: 70px;
   padding: 20px;
   color: white;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .App-title {
@@ -20,9 +13,4 @@
 
 .App-intro {
   font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
