--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,36 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.InputTodo, .FilterTodo, .TodoList{
+  margin: 8px 0;
+}
+.label{
+  display: inline;
+}
+.checkmark {
+  margin-right: 20px;
+  float: left;
+  height: 15px;
+  width: 15px;
+}
+.TodoList{
+  padding: 0 30%;
+}
+.TodoItem{
+  padding: 5px;
+}
+.cross{
+  float: right;
+  text-align: center;
+  margin-left: 5px;
+  height: 20px;
+  font-size: 10px;
+  width: 20px;
+}
+.TodoHeader{
+  text-align: center;
+}
+.text{
+  font-size: 10px;
+  text-align: left;
+}
